# spiro-raw

./: spiro-raw.cabal
cbits/: test.c
src/Graphics/Spiro/: Raw.hsc
test/: diagrams.hs  test.hs
