Name:                spiro-raw
Version:             0.1
Synopsis:            Haskell wrapper for libspiro.
Description:         Haskell wrapper for Raph Levien's libspiro.  http://libspiro.sourceforge.net/
Homepage:            http://patch-tag.com/r/fryguybob/spiro-raw
License:             GPL-2
License-file:        LICENSE
Author:              Ryan Yates
Maintainer:          fryguybob@gmail.com
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6
Source-repository head
  type:     darcs
  location: http://patch-tag.com/r/fryguybob/spiro-raw

Library
  Exposed-modules:     Graphics.Spiro.Raw
  Hs-source-dirs:      src
  Build-depends:       base >= 4 && < 5,
                       transformers > 0.2 && < 0.3
  c-sources:           cbits/bezctx.c,
                       cbits/spiro.c,
                       cbits/spiroentrypoints.c
  include-dirs:        cbits
  includes:            bezctx.h,
                       bezctx_intf.h,
                       spiro.h,
                       spiroentrypoints.h,
                       zmisc.h

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:         hsc2hs
